# pomotroid

./: .gitignore  README.md  generate.py  install.py  install.sh  palette.json  pyproject.toml  requirements.txt  theme.json
.github/workflows/: build.yml  release.yml
assets/: iguide.webm
